<?xml version="1.0"?>
<package format="2">
  <name>fam</name>
  <version>0.0.0</version>
  <description>The FourAxis_manipulator package</description>

  <maintainer email="17863110617@qq.com">Shield_QIQI</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>serial</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>serial</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>robot_state_publisher</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>serial</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>

  </export>
</package>
